--- a/breakOut/style.css
+++ b/breakOut/style.css
@@ -1,6 +1,10 @@
-* { padding: 0; margin: 0; }
 
+/* body{
+    display: flex;
+    justify-content: center;
+    align-items: center
+} */
 canvas{
-    background-color: red;
+    background-color: #5ae;
     color: red
 }
