--- a/breakOut/style.css
+++ b/breakOut/style.css
@@ -1,9 +1,9 @@
 
-/* body{
+body{
     display: flex;
     justify-content: center;
     align-items: center
-} */
+}
 canvas{
     background-color: #5ae;
     color: red
